--- a/code/cfg/cocoStage1.yml
+++ b/code/cfg/cocoStage1.yml
@@ -2,12 +2,12 @@ ConfigName: 'stage1'
 GPU_ID: '0,1'
 LatentDim: 100
 DataDir: '../data/coco'
-ImageSizeStage1: 64
+ImSize: 64
 Workers: 4
 Stage: 1
 BatchSize: 128
 NumEpochs: 120
-LRDecayEpoch: 20
+LrDecayEpoch: 20
 saveModelEpoch: 10
 DiscInputDim: 96
 GenInputDim: 192
