--- a/code/cfg/cocoStage1.yml
+++ b/code/cfg/cocoStage1.yml
@@ -1,11 +1,11 @@
 ConfigName: 'stage1'
-GPU_ID: '0,1'
+GPU_ID: '0'
 LatentDim: 100
-DataDir: '../data/coco'
+DataDir: '..\data\coco'
 ImSize: 64
 Workers: 4
 Stage: 1
-BatchSize: 128
+BatchSize: 2
 NumEpochs: 120
 LrDecayEpoch: 20
 saveModelEpoch: 10
